2001-05-30 13:30 UTC-0400 David G. Holm <dholm@jsd-llc.com>

  * source/rtl/gtsln/gtsln.c
  * source/rtl/gtsln/kbsln.c
  * source/rtl/gtsln/keytrans.c
    % Changed to the new Harbour License, per request from Marek Paliwoda

2001-05-30 09:05 UTC-0800 Ron Pinkas <ron@profit-master.com>
   * contrib/dot/pp.prg
     + PP_ResetRules()
     + PP_InitStd()
     + PP_LoadRun()
     + PP_LoadClass()
     + PP_LoadFW()

2001-05-30 08:45 UTC-0800 Ron Pinkas <ron@profit-master.com>
   * contrib/dot/pp.prg
     ! Fixed PP_PreProLine() to not generate '#line n "<module>"' if module name is empty()

2001-05-30 01:30 UTC-0800 Ron Pinkas <ron@profit-master.com>
   * contrib/dot/pp.prg
     + Added PP_PreProText( cText [, acLines ] ) returns the pre-process text and optional file asLines with pre=processed lines.
     + Added PP_RunText( cText, [bPreProcess], [aParmas] ) returns the return value of executed code. bPreProcess defaults to .T.
     * Enhanced PP_Run( cFile [, aParams] ) to accept optioanl Array with Paramaters.
     ! Minor correction in NextExp().

   * contrib/dot/prgscrpt.prg
     * Rewrote sample to demonstarte new simpler wrapper functions:

2001-05-28 19:10 UTC-0800 Ron Pinkas <ron@profit-master.com>
   * contrib/dot/pp.prg
     * Modified PP_PreProLine() to handle multi-line lines (;) as primary line.
     * Improved PP_RunInit() accept aProcedure as paramater. Now it can auto handle setup of RP_Run_Err() and reset aProcedures to {}
       + Added loading of std.ch

   * contrib/dot/prgscrpt.prg
     * Simplified samples, and added a simpler inline form sample.

   /*
     PP_RunInit( aCompiledProcs )

     // Note the return value from PP_ExecProcedure() and no Procedure declaration in this 1st. sample...
     Alert( PP_ExecProcedure( ;
              PP_CompileLine( ;
                PP_PreProLine( "Private cVar := 'Hi there'; ? cVar; Return 'Returned from embedded script!'" ), ;
                               0, aCompiledProcs, NIL, @nProcId )[1] ) )
   */
